--- a/cookie-guru/pom.xml
+++ b/cookie-guru/pom.xml
@@ -5,13 +5,12 @@
     <parent>
         <artifactId>common-guru</artifactId>
         <groupId>guru.bootstrap</groupId>
-        <version>1.0.0</version>
+        <version>1.0.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>cookie-guru</artifactId>
-    <version>1.0.0</version>
-
+    <version>1.0.0-SNAPSHOT</version>
 
     <build>
         <plugins>
