--- a/encryption-guru/pom.xml
+++ b/encryption-guru/pom.xml
@@ -9,13 +9,13 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>cache-guru</artifactId>
+    <artifactId>encryption-guru</artifactId>
     <version>1.0.0-SNAPSHOT</version>
 
     <dependencies>
         <dependency>
-            <groupId>com.google.guava</groupId>
-            <artifactId>guava</artifactId>
+            <groupId>org.jasypt</groupId>
+            <artifactId>jasypt</artifactId>
         </dependency>
     </dependencies>
 
@@ -39,5 +39,4 @@
             </plugin>
         </plugins>
     </build>
-
 </project>
