--- a/cache-guru/pom.xml
+++ b/cache-guru/pom.xml
@@ -5,17 +5,22 @@
     <parent>
         <artifactId>common-guru</artifactId>
         <groupId>guru.bootstrap</groupId>
-        <version>1.0.0-SNAPSHOT</version>
+        <version>1.0.2-SNAPSHOT</version>
+        <relativePath>../../common-guru</relativePath>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>cache-guru</artifactId>
-    <version>1.0.0-SNAPSHOT</version>
 
     <dependencies>
         <dependency>
             <groupId>com.google.guava</groupId>
             <artifactId>guava</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.github.ben-manes.caffeine</groupId>
+            <artifactId>caffeine</artifactId>
+            <version>2.8.5</version>
         </dependency>
     </dependencies>
 
