--- a/cookie-guru/pom.xml
+++ b/cookie-guru/pom.xml
@@ -5,12 +5,20 @@
     <parent>
         <artifactId>common-guru</artifactId>
         <groupId>guru.bootstrap</groupId>
-        <version>1.0.0-SNAPSHOT</version>
+        <version>1.0.2-SNAPSHOT</version>
+        <relativePath>../../common-guru</relativePath>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>cookie-guru</artifactId>
-    <version>1.0.0-SNAPSHOT</version>
+
+    <dependencies>
+        <dependency>
+            <groupId>org.apache.tomcat.embed</groupId>
+            <artifactId>tomcat-embed-core</artifactId>
+            <scope>provided</scope>
+        </dependency>
+    </dependencies>
 
     <build>
         <plugins>
