--- a/pom.xml
+++ b/pom.xml
@@ -7,17 +7,19 @@
     <groupId>guru.bootstrap</groupId>
     <artifactId>common-guru</artifactId>
     <packaging>pom</packaging>
-    <version>1.0.0-SNAPSHOT</version>
+    <version>1.0.2-SNAPSHOT</version>
 
     <modules>
         <module>cache-guru</module>
         <module>cookie-guru</module>
         <module>encryption-guru</module>
+        <module>http-guru</module>
     </modules>
 
     <properties>
         <guava.version>29.0-jre</guava.version>
         <jasypt.version>1.9.3</jasypt.version>
+        <tomcat.version>9.0.37</tomcat.version>
         <maven.compiler.target>1.8</maven.compiler.target>
         <maven.compiler.source>1.8</maven.compiler.source>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -34,6 +36,11 @@
                 <groupId>org.jasypt</groupId>
                 <artifactId>jasypt</artifactId>
                 <version>${jasypt.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.apache.tomcat.embed</groupId>
+                <artifactId>tomcat-embed-core</artifactId>
+                <version>${tomcat.version}</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
